--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -1,147 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activities.DetailedActivity"
+    android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.DetailedActivity"
-    android:background="@color/colorPrimary">
+    android:fillViewport="true">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="30dp">
+
+
 
     <ImageView
         android:id="@+id/detailed_img"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:maxWidth="350dp"
+        android:maxHeight="350dp"
+        android:minWidth="280dp"
+        android:minHeight="280dp"
         android:scaleType="centerCrop"
+        android:background="@drawable/ic_login_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="100dp"
+        android:layout_height="6dp"
+        android:layout_marginTop="-5.5dp"
+        android:elevation="2dp"
+        android:background="@drawable/ic_view_item_bar_current"
+        android:contentDescription="current"
+        app:layout_constraintTop_toBottomOf="@+id/view_item_bar"
+        tools:layout_editor_absoluteX="0dp"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/view_item_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/grey"
+        android:layout_height="4dp"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/ic_view_item_bar"
+        android:contentDescription="totalbar"
+        android:elevation="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:title="Detailed Products" />
+        app:layout_constraintTop_toBottomOf="@+id/detailed_img" />
+
+
+    <TextView
+        android:id="@+id/detailed_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:lines="1"
+        android:fontFamily="@font/lato_bold"
+        android:text="Item name."
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:gravity="left"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_item_bar" />
 
     <TextView
         android:id="@+id/detailed_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Price:"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        android:textStyle="bold"
         android:fontFamily="@font/lato"
+        android:lines="1"
+        android:textSize="22sp"
+        android:textColor="@color/our_black"
+        android:layout_marginTop="4dp"
+        android:gravity="left"
+        android:text="200 tg"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/detailed_img"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/detailed_name" />
+
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="75dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginRight="10dp"
+        android:id="@+id/view_ratingbar"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:src="@drawable/ratingbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/detailed_img" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/detailed_price" />
 
     <TextView
         android:id="@+id/detailed_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="5.0"
-        android:fontFamily="@font/lato"
+        android:fontFamily="@font/lato_bold"
+        android:padding="2dp"
+        android:layout_marginTop="4dp"
+        android:text="(58)"
+        android:textColor="@color/our_black"
         android:textSize="20sp"
-        android:layout_marginTop="14dp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/detailed_img" />
+        app:layout_constraintStart_toEndOf="@+id/view_ratingbar"
+        app:layout_constraintTop_toBottomOf="@+id/detailed_price" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/lato"
-        android:text="Description"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="20sp"
+    <ImageView
+        android:id="@+id/pause"
+        android:layout_width="match_parent"
+        android:layout_height="1.5dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/ic_view_item_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailed_price" />
+        app:layout_constraintTop_toBottomOf="@+id/view_ratingbar" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/add_to_cart"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/ic_btn_gradient_2"
+        android:fontFamily="@font/lato_bold"
+        android:text="Add to cart"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintTop_toBottomOf="@+id/pause"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/detailed_dec"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:text="@string/description"
-        android:textAlignment="center"
+        android:layout_marginTop="20dp"
+        android:gravity="left"
+        android:textSize="20sp"
+        android:fontFamily="@font/lato"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/add_item"
-        android:layout_width="54dp"
-        android:layout_height="54dp"
-        android:src="@drawable/add_circle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
-        android:layout_marginLeft="6dp"/>
-
-    <TextView
-        android:id="@+id/quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_marginEnd="1dp"
-        android:text="1"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/remove_item"
-        app:layout_constraintStart_toEndOf="@id/add_item"
-        app:layout_constraintTop_toTopOf="@id/relativeLayout" />
-
-    <ImageView
-        android:id="@+id/remove_item"
-        android:layout_width="54dp"
-        android:layout_height="54dp"
-        android:src="@drawable/remove_circle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/quantity"
-        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/add_to_cart"
-        android:layout_width="150dp"
-        android:layout_marginRight="10dp"
-        android:layout_height="wrap_content"
-        android:text="Add to cart"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:background="@drawable/btn_bg_detailed"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/add_to_cart" />
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
